# QJoysticks

./: CMakeLists.txt  conanfile.py
examples/JoystickList/: CMakeLists.txt  JoystickList.pro  conanfile.py  main.cpp  main.qml
